<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon = "@drawable/ic_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/favorite_user"
        android:title="@string/favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        app:showAsAction="collapseActionView|ifRoom"/>
    <item android:id="@+id/menu_refresh"
        android:title="@string/refresh"
        android:icon = "@drawable/ic_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settings"
        android:title="@string/setting"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_change_settings"
        android:title="@string/change_language_settings"
        app:showAsAction="never"/>

</menu>