<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <View
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/bg_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:alpha="0.2"
            android:contentDescription="@string/github_alpha_image"
            android:src="@drawable/ic_github_logo_black"
            android:translationX="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/container2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="110dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/detail_avatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container2"
            app:riv_corner_radius="28dp"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/detail_avatar"
            android:text="@string/name"
            android:textColor="@color/gray_light"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/detail_avatar"
            app:layout_constraintTop_toBottomOf="@id/container2" />

        <TextView
            android:id="@+id/detail_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_name"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/detail_avatar"
            android:text="@string/username"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/detail_avatar"
            app:layout_constraintTop_toBottomOf="@+id/detail_name" />

        <TextView
            android:id="@+id/detail_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp"
            android:drawablePadding="5dp"
            android:maxLength="20"
            android:text="@string/location"
            android:textSize="14sp"
            android:textColor="@color/gray_slate"
            app:drawableStartCompat="@drawable/ic_location"
            app:layout_constraintStart_toEndOf="@+id/detail_avatar"
            app:layout_constraintTop_toBottomOf="@+id/detail_username" />

        <TextView
            android:id="@+id/detail_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="5dp"
            android:maxLength="28"
            android:text="@string/company"
            android:textSize="14sp"
            android:textColor="@color/gray_slate"
            app:drawableStartCompat="@drawable/ic_building"
            app:layout_constraintStart_toEndOf="@+id/detail_avatar"
            app:layout_constraintTop_toBottomOf="@+id/detail_location" />

        <View
            android:id="@+id/container3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/circlewhite"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_avatar"/>

        <View
            android:id="@+id/container5"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@id/container3"
            app:layout_constraintStart_toStartOf="@id/container3"
            app:layout_constraintTop_toBottomOf="@+id/container3"
            app:layout_constraintTop_toTopOf="@id/container3"/>

        <ImageView
            android:layout_marginEnd="5dp"
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/icon_users"
            android:src="@drawable/ic_user"
            app:layout_constraintBottom_toBottomOf="@+id/container3"
            app:layout_constraintEnd_toStartOf="@+id/detail_followers"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/container5"
            app:layout_constraintTop_toTopOf="@+id/container3" />

        <TextView
            android:layout_marginEnd="5dp"
            android:id="@+id/detail_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textColor="@color/onPrimary"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/container3"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/container3" />

        <TextView
            android:layout_marginEnd="5dp"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:textColor="@color/onPrimary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/container3"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/detail_followers"
            app:layout_constraintTop_toTopOf="@+id/container3" />

        <ImageView
            android:layout_marginEnd="5dp"
            android:id="@+id/imageView4"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:contentDescription="@string/dot"
            android:src="@drawable/circle"
            app:layout_constraintBottom_toBottomOf="@+id/container3"
            app:layout_constraintEnd_toStartOf="@+id/detail_following"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/container3" />

        <TextView
            android:layout_marginEnd="5dp"
            android:id="@+id/detail_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textColor="@color/onPrimary"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/container3"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/container3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textColor="@color/onPrimary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/container3"
            app:layout_constraintEnd_toStartOf="@+id/container5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/detail_following"
            app:layout_constraintTop_toTopOf="@+id/container3" />

        <View
            android:id="@+id/container4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:layout_marginTop="4dp"
            android:paddingVertical="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container3" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/onPrimary"
            android:contentDescription="@string/action"
            android:src="@drawable/ic_baseline_favorite_border_24"
            app:layout_constraintBottom_toBottomOf="@+id/container4"
            app:layout_constraintEnd_toEndOf="@+id/container4"
            app:layout_constraintTop_toTopOf="@+id/container4" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="5dp"
            android:text="@string/repository"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_repo"
            app:layout_constraintBottom_toBottomOf="@+id/container4"
            app:layout_constraintStart_toStartOf="@id/container3"
            app:layout_constraintTop_toBottomOf="@id/container3" />

        <TextView
            android:id="@+id/detail_repo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/number"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/rounded_dark"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container4"
            app:tabGravity="fill"
            app:tabIconTint="@color/gray_slate"
            app:tabIndicatorAnimationMode="elastic"
            app:tabIndicatorColor="@color/onPrimary"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorHeight="3dp"
            app:tabRippleColor="@color/gray_slate"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/gray" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>